tests/fixtures/invalid/divmod_set_set.py
# Cannot call divmod() with Set[int], Set[int]
x = divmod({1, 2, 3}, {1, 2, 3})
